--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,18 @@ dependencies:
   
   # Mathematical operations
   vector_math: ^2.1.0
+  
+  # Social sharing functionality
+  share_plus: ^7.2.2
+  
+  # Screenshot capture
+  screenshot: ^2.1.0
+  
+  # Path provider for file operations
+  path_provider: ^2.1.1
+  
+  # Haptic feedback and vibration
+  vibration: ^3.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
