--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,21 @@ dependencies:
   
   # Haptic feedback and vibration
   vibration: ^3.1.3
+  
+  # Firebase dependencies
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
+  cloud_firestore: ^4.13.0
+  google_sign_in: ^6.1.0
+  
+  # Network connectivity detection
+  connectivity_plus: ^5.0.0
+  
+  # State management
+  provider: ^6.1.0
+  
+  # Image caching for user avatars
+  cached_network_image: ^3.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
